--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
     "pg": "^8.11.3",
     "zod": "3.22.1"
