--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start:postgre": "node --watch server-with-pg.js"
   },
   "keywords": [],
   "author": "",
