--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "mysql2": "^3.6.0",
     "pg": "^8.11.3",
     "zod": "3.22.1"
