--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:postgre": "node server-with-pg.js"
+    "start:postgre": "node server-with-pg.js",
+    "test": "mocha tests/client.test.js"
   },
   "keywords": [],
   "author": "GrupoTesis",
@@ -23,11 +24,13 @@
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "mysql2": "^3.6.0",
     "pg": "^8.11.3",
+    "supertest": "^6.3.3",
     "zod": "3.22.1"
   }
 }
