--- a/package.json
+++ b/package.json
@@ -6,32 +6,35 @@
   "type": "module",
   "scripts": {
     "start:postgre": "node server-with-pg.js",
-    "test:client": "mocha tests/client.test.js",
-    "test:auth": "mocha tests/auth.test.js"
+    "test:client": "playwright test example.spec.cjs"
   },
   "keywords": [],
   "author": "GrupoTesis",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@types/node": "^20.10.6",
     "nodemon": "^3.0.1",
     "standard": "^17.1.0"
   },
   "eslintConfig": {
-    "extends": "standard"
+    "extends": "standard",
+    "env": {
+      "node": true
+    }
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "mysql2": "^3.6.0",
     "pg": "^8.11.3",
-    "supertest": "^6.3.3",
     "zod": "3.22.1"
   }
 }
