--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "zod": "3.22.1"
   }
