--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start:postgre": "node server-with-pg.js",
     "dev:postgre": "SET NODE_ENV=development & nodemon server-with-pg.js",
-    "test-play:client": "playwright test example.spec.cjs",
-    "test": "jest --verbose"
+    "test": "playwright test"
   },
   "keywords": [],
   "author": "GrupoTesis",
@@ -16,10 +15,8 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@types/node": "^20.10.6",
-    "jest": "^30.0.3",
     "nodemon": "^3.0.1",
-    "standard": "^17.1.0",
-    "supertest": "^7.1.1"
+    "standard": "^17.1.0"
   },
   "eslintConfig": {
     "extends": "standard",
@@ -42,15 +39,5 @@
     "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "zod": "3.22.1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-      "testPathIgnorePatterns": [
-   "/node_modules/",
-    "/tests-examples/demo-todo-app.spec.js",
-    "/tests/client.test.js",
-    "/tests/example.spec.js"
-  ]
   }
-
 }
